--- a/app/src/main/res/layout/fragment_wizardpage_user_account_2_sex_birthdate.xml
+++ b/app/src/main/res/layout/fragment_wizardpage_user_account_2_sex_birthdate.xml
@@ -17,39 +17,32 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            style="@style/WizardFormLabel"
-            android:text="@string/label_genre" />
+        <!--<TextView-->
+        <!--style="@style/WizardFormLabel"-->
+        <!--android:text="@string/label_genre" />-->
 
-        <RadioGroup
-            android:id="@+id/genderRadioGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
+        <!--<RadioGroup-->
+        <!--android:id="@+id/genderRadioGroup"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:weightSum="2">-->
 
-            <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:weightSum="2">-->
+        <!--<RadioButton-->
+        <!--android:id="@+id/genderMaleRadioButton"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:text="Male" />-->
 
-            <RadioButton
-                android:id="@+id/genderMaleRadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Male" />
+        <!--<RadioButton-->
+        <!--android:id="@+id/genderFemaleRadioButton"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:text="Female" />-->
 
-            <RadioButton
-                android:id="@+id/genderFemaleRadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Female" />
-            <!--</LinearLayout>-->
-
-        </RadioGroup>
+        <!--</RadioGroup>-->
 
         <TextView
             style="@style/WizardFormLabel"
