--- a/app/src/main/res/layout/fragment_wizardpage_user_account_1_name_email_password.xml
+++ b/app/src/main/res/layout/fragment_wizardpage_user_account_1_name_email_password.xml
@@ -28,42 +28,42 @@
                 android:inputType="textCapWords"
                 android:saveEnabled="false" />
 
-            <TextView
-                style="@style/WizardFormLabel"
-                android:text="@string/label_email" />
+            <!--<TextView-->
+            <!--style="@style/WizardFormLabel"-->
+            <!--android:text="@string/label_email" />-->
 
-            <EditText
-                android:id="@+id/emailText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:hint="@string/hint_email"
-                android:inputType="textCapWords"
-                android:saveEnabled="false" />
+            <!--<EditText-->
+            <!--android:id="@+id/emailText"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="16dp"-->
+            <!--android:hint="@string/hint_email"-->
+            <!--android:inputType="textCapWords"-->
+            <!--android:saveEnabled="false" />-->
 
-            <TextView
-                style="@style/WizardFormLabel"
-                android:text="@string/label_password" />
+            <!--<TextView-->
+            <!--style="@style/WizardFormLabel"-->
+            <!--android:text="@string/label_password" />-->
 
-            <EditText
-                android:id="@+id/passwordText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:inputType="textPassword"
-                android:saveEnabled="false" />
+            <!--<EditText-->
+            <!--android:id="@+id/passwordText"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="16dp"-->
+            <!--android:inputType="textPassword"-->
+            <!--android:saveEnabled="false" />-->
 
-            <TextView
-                style="@style/WizardFormLabel"
-                android:text="@string/label_confirm_password" />
+            <!--<TextView-->
+            <!--style="@style/WizardFormLabel"-->
+            <!--android:text="@string/label_confirm_password" />-->
 
-            <EditText
-                android:id="@+id/password2Text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:inputType="textPassword"
-                android:saveEnabled="false" />
+            <!--<EditText-->
+            <!--android:id="@+id/password2Text"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="16dp"-->
+            <!--android:inputType="textPassword"-->
+            <!--android:saveEnabled="false" />-->
 
         </LinearLayout>
     </ScrollView>
