--- a/app/src/main/res/layout/content_wizard.xml
+++ b/app/src/main/res/layout/content_wizard.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.pixnfit.CreateAccountWizardActivity"
+    tools:context=".CreateProfileWizardActivity"
     tools:showIn="@layout/activity_wizard">
 
     <com.tech.freak.wizardpager.ui.StepPagerStrip
