Ajout des pages Inbox et Followers

--- a/app/src/main/res/layout/content_post.xml
+++ b/app/src/main/res/layout/content_post.xml
@@ -17,7 +17,7 @@
 
     <include
         android:id="@+id/bottom_bar"
-        layout="@layout/bottom_bar"
+        layout="@layout/footer_bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
