--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--Theme colors-->
     <color name="colorPrimary">#00A6D0</color>
+    <color name="pixnfitPrimary">#00A6D0</color>
     <color name="colorPrimaryIntermediate">#007995</color>
+    <color name="pixnfitPrimaryIntermediate">#007995</color>
     <color name="colorPrimaryDark">#005F75</color>
+    <color name="pixnfitPrimaryDark">#005F75</color>
     <color name="colorAccent">#00A6D0</color>
+    <color name="pixnfitAccent">#00A6D0</color>
+
+    <!--Other colors-->
     <color name="red">#FF0000</color>
     <color name="transparent">#00000000</color>
     <color name="white">#FFF</color>
