Ajout du nom de l'utilisateur sous l'image dans les listes

--- a/app/src/main/res/layout/grid_item_user.xml
+++ b/app/src/main/res/layout/grid_item_user.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:gravity="center">
 
     <com.pixnfit.ui.SquareImageView
         android:id="@+id/userImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
-</LinearLayout>
+        android:layout_alignParentTop="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/profile" />
+
+    <TextView
+        android:id="@+id/userNameView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/userImageView"
+        android:layout_margin="4dp"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:lines="1"
+        android:text="User name"
+        android:textSize="12dp" />
+</RelativeLayout>
